--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "express-session": "^1.18.1",
     "nodemailer": "^7.0.9",
     "openai": "^6.3.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.15.0",
     "pg": "^8.12.0"
   }
