--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "connect-pg-simple": "^10.0.0",
     "openai": "^6.3.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
