--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@google/generative-ai": "^0.24.1",
     "@sendgrid/mail": "^8.1.3",
     "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
